--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 
   <!-- swiper css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.1.0/swiper-bundle.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-  
+
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="img/favicon.png" />
   <title>ChatMate | Love at first chat</title>
 </head>
 
 <body>
-  <nav class="navbar">
+  <nav class="navbar" id="navbar">
     <a class="logo" href="index.html">ChatMate</a>
     <div class="menu-hamburger">
       <div class="button-burger-menu"></div>
     </div>
-    <div class="links-navbar">
+    <div class="links-navbar" id="links-navbar">
       <ul>
         <li>
           <a href="#">Tour</a>
@@ -39,190 +40,220 @@
 
 
   <section class="home" id="home">
-      <div class="home-text">
-        <h1>ChatMate</h1>
-        <h2><span class="slogan-app"></span></h2>
-        <a href="register.html" class="primary-button">Create account</a>
-        <a href="login.html" class="mobile-login">Login</a>
+    <div class="home-text">
+      <h1>ChatMate</h1>
+      <h2><span class="slogan-app"></span></h2>
+      <p>Our dating website is the perfect place to find love, fun, and everything in between. Sign up now and let the journey begin!</p>
+      <a href="register.html" class="primary-button">Get Started</a>
+      <a href="login.html" class="mobile-login">Login</a>
     </div>
   </section>
-  
-  
+
+
   <!-------- special service section-------------->
   <section class="special container" id="special">
-  <div class="special-div">
-    <h2 class="heading">Find your Special Someone</h2>
+    <div class="special-div">
+      <h2 class="heading">Find your Special Someone</h2>
+      <p class="sub-heading">The lorem text the section that contains header with having open functionality. Lorem dolor
+        sit amet consectetur adipisicing elit.</p>
+    </div>
+
     <div class="special-content">
+      
       <div class="special-box">
-        <img src="img/Mobile login-pana.png" alt=""  class="special-img">
+        <img src="img/feature-1.png" alt="" class="special-img">
         <a href="#">Signup</a>
         <p>Register for free & put up your Matrimony Profile</p>
       </div>
 
       <div class="special-box">
-        <img src="img/Accept-request-rafiki.png" alt="" href="#" class="special-img">
-        <a href="#" >Connect</a>
+        <img src="img/feature-2.png" alt="" href="#" class="special-img">
+        <a href="#">Connect</a>
         <p>Select & Connect with Matches you like
         </p>
       </div>
 
       <div class="special-box">
-        <img src="img/Texting-pana.png" alt="" href="#" class="special-img">
+        <img src="img/feature-3.png" alt="" href="#" class="special-img">
         <a href="#">Interact</a>
         <p>Become a Premium Member & Start a Conversation
         </p>
       </div>
+
     </div>
-  </div>
   </section>
 
   <section class="testimonials">
+
+    <div class="testimonials-div">
+      <h2 class="heading">Our Success Stories </h2>
+      <p class="sub-heading">The lorem text the section that contains header with having open functionality. Lorem dolor
+        sit amet consectetur adipisicing elit.</p>
+    </div>
+
     <div class="slide-container swiper">
       <div class="slide-content">
-          <div class="card-wrapper swiper-wrapper">
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
+        <div class="card-wrapper swiper-wrapper">
 
-                      <div class="card-image">
-                          <img src="img/images/profile1.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="/img/images/picture1.jpg" alt="picture1">
               </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile2.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
+              <div class="details">
+                <h3>Naya & Ishaan</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
               </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile3.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
-              </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile4.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
-              </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile5.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
-              </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile7.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
-              </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile8.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">View More</button>
-                  </div>
-              </div>
-              <div class="card swiper-slide">
-                  <div class="image-content">
-                      <span class="overlay"></span>
-
-                      <div class="card-image">
-                          <img src="img/images/profile9.jpg" alt="" class="card-img">
-                      </div>
-                  </div>
-
-                  <div class="card-content">
-                      <h2 class="name">David Dell</h2>
-                      <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-
-                      <button class="button">Read More</button>
-                  </div>
-              </div>
+            </div>
           </div>
+
+
+
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="img/images/picture2.jpg" alt="las vegas">
+              </div>
+              <div class="details">
+                <h3>Jai & Inaya</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="img/images/picture3.jpg" alt="las vegas">
+              </div>
+              <div class="details">
+                <h3>Amar & Navi</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="img/images/picture4.jpg" alt="las vegas">
+              </div>
+
+              <div class="details">
+                <h3> Jessie & Marion</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="/img/images/picture3.jpg" alt="las vegas">
+              </div>
+              <div class="details">
+                <h3>Jackie & Alva </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="card">
+              <div class="container">
+                <img class="slide-img" src="/img/images/picture4.jpg" alt="las vegas">
+              </div>
+              <div class="details">
+                <h3>Ollie & Jodie</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dignissimos, minus aperiam
+                  adipisci exercitationem.</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
 
       <div class="swiper-button-next swiper-navBtn"></div>
       <div class="swiper-button-prev swiper-navBtn"></div>
       <div class="swiper-pagination"></div>
-  </div>
+    </div>
   </section>
 
-  <footer>
+
+  <section id="footer">
+    <div class="footer-content">
+      <div class="main">
+        <div class="list" id="list">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Terms & Conditions</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Tour</a></li>
+          </ul>
+        </div>
+
+        <div class="list" id="list">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Terms & Conditions</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Tour</a></li>
+          </ul>
+        </div>
+
+        <div class="list" id="list">
+          <h4>Contact Info</h4>
+          <ul>
+            <li><a href="">Aligarh</a></li>
+            <li><a href="">Uttar Pradesh, India</a></li>
+            <li><a href="">+91 9876543210</a></li>
+            <li><a href="">chatmate@gmail.com</a></li>
+            <li><a href="">+91 1234567890</a></li>
+          </ul>
+        </div>
+
+        <div class="list" id="list">
+          <h4>Connect</h4>
+          <div class="social">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="end-text">
+      <p>Copyright &#169;2023 All rights reserved | Made with <i class="bx bxs-heart heart-icon"></i> in India </p>
+    </div>
+   </section>
+
+
+  <!-- <footer>
     <p>
       This site is inspired by that of tinder and is for educational purposes and
       non-profit
     </p>
-  </footer>
+  </footer> -->
 
   <!-- swiper js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.1.0/swiper-bundle.min.js"></script>
