--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="card swiper-slide">
             <div class="card">
               <div class="container">
-                <img class="slide-img" src="/img/images/picture1.jpg" alt="picture1">
+                <img class="slide-img" src="img/images/picture1.jpg" alt="picture1">
               </div>
               <div class="details">
                 <h3>Naya & Ishaan</h3>
@@ -159,7 +159,7 @@
           <div class="card swiper-slide">
             <div class="card">
               <div class="container">
-                <img class="slide-img" src="/img/images/picture3.jpg" alt="las vegas">
+                <img class="slide-img" src="img/images/picture3.jpg" alt="las vegas">
               </div>
               <div class="details">
                 <h3>Jackie & Alva </h3>
@@ -173,7 +173,7 @@
           <div class="card swiper-slide">
             <div class="card">
               <div class="container">
-                <img class="slide-img" src="/img/images/picture4.jpg" alt="las vegas">
+                <img class="slide-img" src="img/images/picture4.jpg" alt="las vegas">
               </div>
               <div class="details">
                 <h3>Ollie & Jodie</h3>
