--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="home-text">
       <h1>ChatMate</h1>
       <h2><span class="slogan-app"></span></h2>
-      <p>Our dating website is the perfect place to find love, fun, and everything in between. Sign up now and let the journey begin!</p>
+      <p>Our dating website is the perfect place to find love, fun, and everything in between. Sign up now and let the
+        journey begin!</p>
       <a href="register.html" class="primary-button">Get Started</a>
       <a href="login.html" class="mobile-login">Login</a>
     </div>
@@ -59,7 +60,7 @@
     </div>
 
     <div class="special-content">
-      
+
       <div class="special-box">
         <img src="img/feature-1.png" alt="" class="special-img">
         <a href="#">Signup</a>
@@ -83,8 +84,38 @@
     </div>
   </section>
 
-  <section class="testimonials">
+  <section class="why-choose" id="why-choose">
 
+    <div class="why-choose-img">
+      <img src="img/Phone-background.png" alt="image">
+    </div>
+    <div class="why-choose-text">
+      <h2>Why Choose Us</h2>
+      <p>Our website is designed to help singles find meaningful connections with like-minded individuals who share
+        their interests, values, and goals.</p>
+
+      <p>With our advanced matching algorithm and comprehensive personality test, we help you find compatible matches
+        based on your unique traits and preferences. Our team of dating experts is dedicated to providing a safe and
+        secure online dating experience, ensuring that all our members feel comfortable and confident in their search
+        for love.</p>
+
+      <p>We believe that every person deserves to find their perfect match, and we are committed to helping you do just
+        that. Whether you're looking for a long-term relationship, a casual fling, or something in between, our dating
+        website is the perfect place to start. Join us today and take the first step towards finding the love of your
+        life!</p>
+    </div>
+  </section>
+
+
+  <section class="find-love">
+    <div class="find-love-content">
+      <h1>Find Real Love Now !</h1>
+      <a href="register.html">Start Free Today</a>
+    </div>
+  </section>
+
+
+  <section class="testimonials">
     <div class="testimonials-div">
       <h2 class="heading">Our Success Stories </h2>
       <p class="sub-heading">The lorem text the section that contains header with having open functionality. Lorem dolor
@@ -245,7 +276,10 @@
     <div class="end-text">
       <p>Copyright &#169;2023 All rights reserved | Made with <i class="bx bxs-heart heart-icon"></i> in India </p>
     </div>
-   </section>
+    
+  </section>
+
+
 
 
   <!-- <footer>
