--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>
           <a href="#">Tour</a>
         </li>
-        <li><a href="#">Dating Advice</a></li>
+        <li><a href="advice.html">Dating Advice</a></li>
         <li>
           <a href="#"></a>
         </li>
@@ -83,6 +83,7 @@
 
     </div>
   </section>
+
 
   <section class="why-choose" id="why-choose">
 
