--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
     <div class="links-navbar" id="links-navbar">
       <ul>
         <li>
-          <a href="#">Tour</a>
+          <a href="tour.html">Tour</a>
         </li>
         <li><a href="advice.html">Dating Advice</a></li>
         <li>
-          <a href="#"></a>
+          <a href="localdate.html">Local Dating</a>
+        </li>
+        <li>
+          <a href="success.html">Succes Stories</a>
         </li>
         <li>
           <a href="login.html" class="secondary-button">Login</a>
