--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
   <div class="screen">
     <div class="form-container">
       <div class="form-content">
-        <h2><a href="index.html">ChatSpace</a></h2>
+        <h2><a href="index.html">ChatMate</a></h2>
         <h3>Create an account</h3>
         <p>
           We need information to help you to found your love.
