--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <div class="screen">
     <div class="form-container">
       <div class="form-content">
-        <h2><a href="./index.html">ChatSpace</a></h2>
+        <h2><a href="./index.html">ChatMate</a></h2>
         <h3>Login</h3>
         <p>
           By continuing you agree to our terms and conditions of use
